--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-hook-form-mui": "^7.0.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "yup": "^1.4.0"
   },
